--- a/azcopy/Dockerfile
+++ b/azcopy/Dockerfile
@@ -1,6 +1,7 @@
-FROM golang
+FROM golang:1.20-alpine3.17
+RUN apk --no-cache add git
 WORKDIR /workspace
-RUN git clone https://github.com/Azure/azure-storage-azcopy .
+RUN git clone --branch 10.18.1 --single-branch https://github.com/Azure/azure-storage-azcopy .
 RUN CGO_ENABLED=0 GOARCH=amd64 GOOS=linux go build -o "dist/azcopy"
 
 FROM gcr.io/distroless/static:nonroot
